--- a/jdk-15/Dockerfile
+++ b/jdk-15/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:${UBUNTU_VERSION}
 ARG NODEJS_VERSION
 ARG MAVEN_VERSION
 ARG JDK_VERSION
-ARG DEBIAN_FRONTEND=noninteractive
+ARG =noninteractive
 
 RUN apt-get update \
     && apt-get upgrade -y \
@@ -12,7 +12,6 @@ RUN apt-get update \
       joe \
       git \
       wget \
-      curl \
       bash \
       zip \
       unzip \
