Switching to Alpine

--- a/jdk-15/Dockerfile
+++ b/jdk-15/Dockerfile
@@ -1,28 +1,24 @@
-ARG UBUNTU_VERSION=20.10
-FROM ubuntu:${UBUNTU_VERSION}
+ARG VERSION=15-jdk-alpine
+
+FROM openjdk:${VERSION}
 
 ARG NODEJS_VERSION=14.x
 ARG MAVEN_VERSION=3.6.3
-ARG JDK_VERSION=openjdk-15-jdk
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update \
-    && apt-get upgrade -y \
-    && apt-get install -y \
-      joe \
+RUN apk update \
+    && apk upgrade -U -a \
+    && apk add \
       git \
       wget \
       bash \
       zip \
       unzip \
-      ${JDK_VERSION} \
     && curl -sL https://deb.nodesource.com/setup_${NODEJS_VERSION} | bash - \
-    && apt-get install -y nodejs \
+    && apk add nodejs \
     && wget https://downloads.apache.org/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
     && tar xzvf apache-maven-${MAVEN_VERSION}-bin.tar.gz -C /opt \
-    && apt-get autoremove \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+	&& rm apache-maven-${MAVEN_VERSION}-bin.tar.gz
 
 ENV PATH=/opt/apache-maven-${MAVEN_VERSION}/bin:$PATH
 
